...
  RecipeRepository._internal();
  static final RecipeRepository instance = RecipeRepository._internal();

  static const List<String> availableCategories = [
    'Entrée',
    'Plat principal',
    'Dessert',
    'Boisson',
  ];

  static const List<String> availableDifficulties = ['Facile', 'Moyen', 'Difficile'];

  final List<Recipe> _recipes = [
    const Recipe(
      id: '1',
      title: 'Riz gras',
      category: 'Plat principal',
...
